--- a/package.json
+++ b/package.json
@@ -1,10 +1,24 @@
 {
   "name": "gamer-bot",
-  "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
   },
   "dependencies": {
-    "meteor-node-stubs": "~0.2.0"
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.4",
+    "html-loader": "^0.4.5",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "webpack": "^3.2.0",
+    "webpack-dev-server": "^2.5.1"
   }
 }
