--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "gamer-bot",
   "scripts": {
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "test": "node ./node_modules/jest/bin/jest.js"
   },
   "dependencies": {
     "react": "^15.6.1",
@@ -12,11 +13,15 @@
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
+    "babel-jest": "^20.0.3",
     "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
     "html-loader": "^0.4.5",
+    "jest": "^20.0.4",
     "node-sass": "^4.5.3",
+    "regenerator-runtime": "^0.10.5",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.2.0",
