--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "test": "node ./node_modules/jest/bin/jest.js"
   },
   "dependencies": {
+    "object-hash": "^1.1.8",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
