--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "css-loader": "^0.28.4",
     "html-loader": "^0.4.5",
     "jest": "^20.0.4",
-    "node-sass": "^4.5.3",
     "regenerator-runtime": "^0.10.5",
+    "sass": "^1.49.7",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.4.1",
