--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
   "name": "gamer-bot",
   "scripts": {
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-    "test": "node ./node_modules/jest/bin/jest.js"
+    "start": "webpack serve",
+    "test": "jest"
   },
   "dependencies": {
     "object-hash": "^1.1.8",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-redux": "^5.0.5",
-    "redux": "^3.7.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
-    "babel-jest": "^20.0.3",
-    "babel-loader": "^7.1.1",
+    "babel-jest": "^27.4.6",
+    "babel-loader": "^8.2.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.4",
-    "html-loader": "^0.4.5",
-    "jest": "^20.0.4",
-    "regenerator-runtime": "^0.10.5",
+    "css-loader": "^6.6.0",
+    "html-loader": "^3.1.0",
+    "jest": "^27.4.7",
+    "regenerator-runtime": "^0.13.9",
     "sass": "^1.49.7",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "webpack": "^3.4.1",
-    "webpack-dev-server": "^2.6.1"
+    "sass-loader": "^12.4.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.68.0",
+    "webpack-dev-server": "^4.7.4"
   }
 }
