--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "gamer-bot",
+  "license": "MIT",
   "scripts": {
     "start": "webpack serve",
     "test": "jest"
   },
   "dependencies": {
-    "object-hash": "^1.1.8",
+    "object-hash": "^2.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -13,7 +14,7 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "babel-core": "^6.25.0",
+    "@babel/core": "^7.17.0",
     "babel-jest": "^27.4.6",
     "babel-loader": "^8.2.3",
     "babel-preset-es2015": "^6.24.1",
