--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,11 @@
 {
-    "presets": ["es2015", "react"]
-}
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "useBuiltIns": "entry"
+        }
+      ],
+      "react"
+    ]
+  }
