--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
     "babel-jest": "^27.4.6",
     "babel-loader": "^8.2.3",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
     "css-loader": "^6.6.0",
     "html-loader": "^3.1.0",
     "jest": "^27.4.7",
@@ -26,7 +26,6 @@
     "sass": "^1.49.7",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
-    "webpack": "^5.68.0",
-    "webpack-dev-server": "^4.7.4"
+    "webpack": "^5.68.0"
   }
 }
