--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "css-loader": "^6.6.0",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-webpack": "^0.13.2",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
     "html-loader": "^3.1.0",
     "jest": "^27.4.7",
     "prettier": "^2.5.1",
