--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "html-loader": "^3.1.0",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "^27.4.7",
     "prettier": "^2.5.1",
     "regenerator-runtime": "^0.13.9",
