--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint:scripts": "eslint --ext=js,jsx ."
   },
   "dependencies": {
+    "@redux-devtools/extension": "^3.2.1",
     "classnames": "^2.3.1",
     "core-js": "3",
     "object-hash": "^2.2.0",
